# finding_extremal_points_in_3D

./: CMakeLists.txt  optimized_graham_scan.cpp
include/: config.h  input_generators.h  matplot_helper.h  tree_scan_helper.h
